# Mendeleev

./: .gitignore  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  streak-check.txt  streak.txt
.github/workflows/: release.yml
Mendeleev/Mendeleev/: ContentView.swift  MendeleevApp.swift
Mendeleev/Mendeleev.xcodeproj/: project.pbxproj
Mendeleev/Mendeleev.xcodeproj/project.xcworkspace/xcuserdata/piumraprathiban.xcuserdatad/: UserInterfaceState.xcuserstate
Mendeleev/Mendeleev.xcodeproj/xcuserdata/piumraprathiban.xcuserdatad/xcschemes/: xcschememanagement.plist
Mendeleev/MendeleevTests/: MendeleevTests.swift
Mendeleev/MendeleevUITests/: MendeleevUITests.swift  MendeleevUITestsLaunchTests.swift
dist-electron/: main.js  preload.cjs
electron/: backup.ts  db.ts  main.ts  preload.ts  window-state.ts
src/: App.tsx  global.d.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  notes.rs
src/hooks/: useNotes.ts
src/lib/: api.ts  text.ts
