[package]
name = "mendeleev"
version = "0.1.0"
description = "Mendeleev — minimalistic notes app for macOS"
authors = ["Piumra Prathiban"]
edition = "2021"

[lib]
name = "mendeleev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
